k8s/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-deployment
spec:
  selector:
   matchLabels:
    app: python-app
  replicas: 1
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: python-app
          image: IMAGE_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: python-app-port
---
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  labels:
    app: python-app
spec:
  type: LoadBalancer
  ports:
  - name: python-app
    port: 5000
  selector:
   app: python-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: python-app.raulaillon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app-service
            port: 
              number: 5000

# ----------
# solo se puede usar puesto 30000 - 32767
#apiVersion: v1
#kind: Service
#metadata:
#  name: python-app-service
#  labels:
#    app: python-app
#spec:
#  type: NodePort
#  ports:
#    - name: http 
#      port: 5000
#      nodePort: 31600
#  selector:
#   app: python-app
